@@ -1,2 +1,2 @@
-// 1.20.1	2024-08-18T17:17:16.8459813	Loot Tables
-4704e63986bfd10d1a66a1ffe065113e1f4d6982 data/ccdbplite/loot_tables/blocks/database_storage.json
+// 1.20.1	2024-09-07T19:53:43.5707884	Loot Tables
+c0eb19315cdb49afe0a18358f8d37ac9ac206a60 data/ccdbplite/loot_tables/blocks/database_storage.json
