@@ -3,6 +3,8 @@
 [Source](https://github.com/Iunius118/cc-dbp-lite).
 
 ## [Unreleased]
+### Added
+- Add functions to name database storage: `setName(name)`, `getName()`.
 
 ## [0.1.3]
 ### Changed
